- moar demo account prevention - fixed style stuff for firefox at least, time moved a bit to the left (wasnt server-time-seconds where'nt visible), vote buttons integrated in navigation bar, gameinfo (version, username, ...) moved to the right since there was no more place on the left

--- a/login/style/default/new_blue_graphics/style.inc.css
+++ b/login/style/default/new_blue_graphics/style.inc.css
@@ -3,7 +3,7 @@ html { font-size:1em; color:#fff; font-style:normal; }
 * html h1,* html h2,* html h3,* html h4 { font-size:100.01%; }
 * html *,* html #planets .active dt { font-size:11px; font-family:sans-serif; }
 
-#time { bottom:0; text-align:right; display:block; margin:0; border-top:.2em solid #aaa; padding:.2em; background-color:#222; word-spacing:-1.1em; line-height:2em; height:2em; white-space:nowrap; z-index:20000; }
+#time { bottom:0; text-align:right; display:block; margin:0 1.4em 0 0; border-top:.2em solid #aaa; padding:.2em; background-color:#222; word-spacing:-1.1em; line-height:2em; height:2em; white-space:nowrap; z-index:20000; }
 * html #time { word-spacing:0; }
 #time dt { margin:0 0 0 .25em; padding:.2em 0 .2em .3em; display:inline; background-color:#777; color:#fff; font-weight:bold; border-width:.1em; border-color:#aaa; border-style:solid none solid solid; font-family:monospace; }
 * html #time dt { padding-right:.5em; }
@@ -124,7 +124,7 @@ body { background-color:#222; margin:1em; }
 
 form { text-align:left; }
 
-#gameinfo { position:fixed; bottom:0.8em; left:.3em; margin:0; padding:0; list-style-type:none; }
+#gameinfo { position:fixed; bottom:3em; right:.3em; margin:0; padding:0; list-style-type:none; }
 
 
 #navigation { border:.1em solid #888; background-color:#777; color:#fff; font-weight:bold; z-index:10000; }
