--- a/login/style/default/simple_grey/fixed.css
+++ b/login/style/default/simple_grey/fixed.css
@@ -4,7 +4,7 @@ body.mit-werbung #content-9,* html body #content-9 { margin-right:1em; }
 body.mit-werbung #content-13,* html body #content-13 { top:7.5em; }
 body.mit-werbung #content-10,* html body  #content-10 { margin-right:120px; }
 
-#time { position:fixed; right:0; border-left:.2em solid #aaa; }
+#time { position:fixed; margin:0 1.4em 0 0; right:0; border-left:.2em solid #aaa; }
 #ress { position:fixed; }
 
 #navigation { position:fixed; top:3.5em; left:1em; width:10em; }
